--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://garethscott.github.io/Portfolio-2/",
+  "homepage": "https://garethscott.github.io/Portfolio-2",
   "name": "portfolio-2",
   "version": "0.1.0",
   "private": true,
